--- a/less/uw.thinstrip.less
+++ b/less/uw.thinstrip.less
@@ -69,8 +69,8 @@
 			a, button {
 				font-family: @font-family-headline;
 				color: #fff;
-				font-size: 18px;
-				font-weight: 400;
+				font-size: 17px;
+				font-weight: 600;
 				position: relative;
 				float: right;
 				padding: 8px 25px 10px 0;
@@ -134,7 +134,7 @@
 					padding-right: 60px;
 					position: relative;
 					z-index: 1;
-					color: #000;
+					color: #404040;
 					background: url(assets/svg/uw-sprite.svg) no-repeat -451px -235px;
 					overflow: hidden;
 					&:after {
